# opencvLearning

./: CMakeLists.txt
src/: CMakeLists.txt
src/testOpenCV/: CMakeLists.txt  testOpenCV.cpp
